--- a/client/views/orders/add_order.html
+++ b/client/views/orders/add_order.html
@@ -33,7 +33,7 @@
 			<label class="control-label">Unit Price</label>
 			<div class="controls">
 				<div class="input-prepend">
-					<span class="add-on">$</span>
+					<span class="add-on">{{getCurrency}}</span>
 					<input type="number" name="price" step="any" min="0" required placeholder="23.00">
 				</div>
 				<input type="hidden" name="sgd" value="0.00">
