--- a/client/views/admin.html
+++ b/client/views/admin.html
@@ -6,14 +6,13 @@
 	{{> verifyPayment}}
 
 	{{> orderManagement}}
+	
+	{{> spreeManagement}}
 
-	{{> merchantListAdmin}}
+	{{> merchantManagement}}
+
 	{{> addMerchant}}
 	{{/if}}
-</template>
-
-<template name="404">
-	<h1>Page not found</h1>
 </template>
 
 <template name="verifyPayment">
@@ -21,8 +20,8 @@
 	<table class="table table-striped table-bordered table-hover table-condensed">
 		<thead>
 			<tr>
-			<th class="span2">ID</th>
-			<th>Transaction Number</th><th>Amount in SGD</th><th>Action</th>
+				<th class="span2">ID</th>
+				<th>Transaction Number</th><th>Amount in SGD</th><th>Action</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -31,8 +30,10 @@
 				<td>{{_id}}</td>
 				<td>{{transaction}}</td>
 				<td>${{amount}}</td>
-				<td><a class="btn btn-success btn-small" name="verify-payment">Verify</a>
-				<a class="btn btn-danger btn-small" name="reject-payment">Reject</a></td>
+				<td>
+					<a class="btn btn-success btn-small" name="verify-payment">Verify</a>
+					<a class="btn btn-danger btn-small" name="reject-payment">Reject</a>
+				</td>
 			</tr>
 			{{/each}}
 		</tbody>
@@ -41,12 +42,164 @@
 
 <template name="orderManagement">
 	<legend>Orders Management</legend>
-	<table class="order-admin-table">
+	
+	{{#if selectedOrder}}
+	<table>
+		<thead>
+			<tr>
+				Selected Order (Last Updated: {{dateFormat selectedOrder.lastUpate}})
+			</tr>
+			<tr>
+				<th>Name</th>
+				<th>Size</th>
+				<th>Colour</th>
+				<th>SGD</th>
+				<th>Qty</th>
+				<th>Alternatives</th>
+				<th>Remarks</th>
+				<th>Progress</th>
+				<th>Notes</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{#each selectedOrder.items}}
+			<tr>
+				<td><a href="{{url}}" target="_blank" title="">{{name}}</a></td>
+				<td>{{size}}</td>
+				<td>{{color}}</td>
+				<td>${{SGD}}</td>
+				<td>{{quantity}}</td>
+				<td></td>
+				<td></td>
+				<td>
+					<span class="item-status-icon label {{itemStatusIcon 1}}"><i class="icon-shopping-cart" name="1"></i></span>
+					<span class="item-status-icon label {{itemStatusIcon 2}}"><i class="icon-plane" name="2"></i></span>
+					<span class="item-status-icon label {{itemStatusIcon 3}}"><i class="icon-gift" name="3"></i></span>
+				</td>
+				<td><textarea class="input-block-level" name="item-remarks"></textarea></td>
+			</tr>
+			{{/each}}
+		</tbody>
+	</table>
+	{{/if}}
+
+	<hr>
+	<table>
 		<thead>
 			<tr>
 				<th class="span2">ID</th>
 				<th>Spree</th>
 				<th>User</th>
+				<th>Status</th>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+			{{#each orders}}
+			<tr>
+				<td><a class="select-order"><span class="hidden-phone">{{_id}}</span>
+				<span class="visible-phone">details</span></a></td>
+				<td>{{spreeName spree}}</td>
+				<td><a href="mailto:{{userEmail user}}" target="_blank">{{userName user}}</a></td>
+				<td>{{statusName status}}</td>
+				<td>
+					<a class="status-dec btn btn-small"><i class="icon-backward"></i></a>
+					<a class="status-inc btn btn-small"><i class="icon-forward"></i></a>
+
+					<a target="_blank" class="email-update btn btn-small"><i class="icon-envelope"></i></a>
+					<a href="mailto:{{userEmail user}}" class="btn btn-small" target="_blank"><i class="icon-edit"></i></a>
+				</td>
+			</tr>
+
+			{{/each}}
+		</tbody>
+	</table>
+</template>
+
+<template name="spreeManagement">
+	<legend>Spree Management</legend>
+</template>
+
+<template name="merchantManagement">
+	{{#each allMerchants}}
+	<div class="span5">
+		<form class="form">
+
+			<div class="row-fluid">
+				<label class="span4">Merchant Name</label>
+				<div class="span8">
+					<input class="input-block-level" type="text" name="_id" value="{{_id}}">
+				</div>
+			</div>
+			<div class="row-fluid">
+				<label class="span4">Merchant URL</label>
+				<div class="span8">
+					<input class="input-block-level" type="url" name="url" value="{{url}}" >
+				</div>
+			</div>
+			<div class="row-fluid">
+				<label class="span4">Banner URL</label>
+				<div class="span8">
+					<input class="input-block-level" type="url" name="banner" value="{{banner}}" >
+				</div>
+			</div>
+			<div class="row-fluid">
+				<label class="span4">Speed</label>
+				<div class="span8">
+					<input class="input-block-level" type="text" name="speed" value="{{speed}}">
+				</div>
+			</div>
+			<div class="row-fluid">
+				<label class="span4">Shipping</label>
+				<div class="span8">
+					<input class="input-block-level" type="text" name="shipping" value="{{shipping}}">
+				</div>
+			</div>
+			<div class="row-fluid">
+				<label class="span4">Currency</label>
+				<div class="span8">
+					<input class="input-block-level" type="text" name="currency" value="{{currency}}">
+				</div>
+			</div>
+			<div class="row-fluid">
+				<label class="span4">Cap</label>
+				<div class="span8">
+					<input class="input-block-level" type="text" name="cap" value="{{cap}}">
+				</div>
+			</div>			
+			<div class="row-fluid">
+				<label class="span4">Remarks</label>
+				<div class="span8">
+					<textarea class="input-block-level" rows="3" name="remarks">{{remarks}}</textarea>
+				</div>
+			</div>
+
+			<b>Counter: #{{counter}}</b>
+
+			<div class="row-fluid">
+				<a type="button" class="btn btn-info span6" name="update"><span class="glyphicon glyphicon-pencil"></span> Update</a>
+				<a type="button" class="btn btn-info span6" name="delete"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+			</div>
+			<div class="row-fluid">
+				{{#if open}}
+				<a type="button" class="btn btn-danger btn-block" name="close">Close spree now</a>
+				{{else}}
+				<a type="button" class="btn btn-success btn-block" name="open">Open new spree</a>
+				{{/if}}
+			</div>
+		</form>
+	</div>
+	{{/each}}
+</template>
+
+<template name="userManagement">
+	<legend>User Management</legend>
+	<table>
+		<thead>
+			<tr>
+				<th class="span2">ID</th>
+				<th>Name</th>
+				<th>Total Purchase Amount</th>
 				<th>Status</th>
 				<th>Action</th>
 			</tr>
@@ -63,19 +216,10 @@
 					<a class="status-inc btn btn-small"><i class="icon-forward"></i></a>
 
 					<a target="_blank" class="email-update btn btn-small"><i class="icon-envelope"></i></a>
+					<a href="mailto:{{userEmail user}}" class="btn btn-small" target="_blank"><i class="icon-edit"></i></a>
 				</td>
 			</tr>
 
-			<!-- 
-			{{#each items}}
-			<tr>
-				<td>{{quantity}}</td>
-				<td><a href="{{url}}" target="_blank" title="">{{name}}</a></td>
-				<td>{{size}}</td>
-				<td>{{color}}</td>
-			</tr>
-			{{/each}} -->
-			
 			{{/each}}
 		</tbody>
 	</table>
