--- a/client/views/orders/order_history.html
+++ b/client/views/orders/order_history.html
@@ -1,4 +1,6 @@
 <template name="orderHistory">
+	<legend>What others are ordering</legend>
+	
 	<table class="table table-hover table-condensed">
 		<thead>
 			<tr>
