--- a/client/views/orders/order_sumary.html
+++ b/client/views/orders/order_sumary.html
@@ -13,8 +13,8 @@
 		<div id="payment-form" style="text-align:left;" class="hide">
 			<p>
 				Make your transfers to either <br>
-				<span>POSB Savings <em>228-21866-9</em> (prefered)</span> or <br>
-				<span>UOB TX <em>366-379-359-2</em> </span> <br>
+				<span>POSB Savings <b>228-21866-9</b> (prefered)</span> or <br>
+				<span>UOB TX <b>366-379-359-2</b> </span> <br>
 
 				Enter the transaction number below for verification
 			</p>
