--- a/client/views/orders/order_list.html
+++ b/client/views/orders/order_list.html
@@ -1,5 +1,7 @@
 <template name="orderList">
-		{{#if myOrder.items}}
+	<legend>Shopping Cart</legend>
+	
+	{{#if myOrder.items}}
 
 	<table class="table table-hover">
 		<thead>
