--- a/client/views/admin.html
+++ b/client/views/admin.html
@@ -1,4 +1,6 @@
 <template name="admin2">
+	<!-- <a class="btn" id="dev">Dev</a> -->
+
 	<h1>Admin Panel</h1>
 	{{#if isInRole 'admin'}}
 	
@@ -20,16 +22,24 @@
 	<table class="table table-striped table-bordered table-hover table-condensed">
 		<thead>
 			<tr>
-				<th class="span2">ID</th>
-				<th>Transaction Number</th><th>Amount in SGD</th><th>Action</th>
+				<th class="span1">ID</th>
+				<th>Bank</th>
+				<th>Account</th>
+				<th>Reference</th>
+				<th>Amount</th>
+				<th>Date</th>
+				<th>Action</th>
 			</tr>
 		</thead>
 		<tbody>
 			{{#each payments}}
 			<tr>
 				<td>{{_id}}</td>
+				<td>{{bank}}</td>
+				<td>{{account}}</td>
 				<td>{{transaction}}</td>
 				<td>${{amount}}</td>
+				<td>{{date}}</td>
 				<td>
 					<a class="btn btn-success btn-small" name="verify-payment">Verify</a>
 					<a class="btn btn-danger btn-small" name="reject-payment">Reject</a>
@@ -87,7 +97,7 @@
 	<table>
 		<thead>
 			<tr>
-				<th class="span2">ID</th>
+				<th class="span1">ID</th>
 				<th>Spree</th>
 				<th>User</th>
 				<th>Status</th>
