--- a/client/views/users/user_page.html
+++ b/client/views/users/user_page.html
@@ -2,68 +2,83 @@
 	{{#each orders}}
 
 	<div class="row-fluid">
-		<div class="well">
-			
-
-			<div class="span5">
-				Order ID: <span class="label label-info">{{_id}}</span> <br>
-				Order Status: <span class="label label-success">{{getStatus}}</span> <br>
-	
-				{{#getSpree spree}}
-				Spree: <span class="label label-info">{{merchant}} #{{counter}}</span>
-				End Date: {{dateFormat endDate}}
-				{{/getSpree}}
+		<div class="box span8">
+			<div class="box-header">
+				<h2>
+					{{#getSpree spree}}
+					{{merchant}} #{{counter}}
+					<!-- End Date: {{dateFormat endDate}} -->
+					{{/getSpree}} 
+				</h2>
+				{{#if stage 1}}
+				<button class="close" style="margin-top:6px;margin-right:10px;">&times;</button>
+				{{/if}}
 			</div>
+			<div class="box-content">
 
+				<span>ID: <span class="label label-info">{{_id}}</span></span>
+				<span class="label label-success pull-right">{{getStatus}}</span>
+				<br><br>
+				<table class="table table-striped table-bordered table-condensed table-hover">
+					<thead>
+						<tr>
+							<th>Quantity</th>
+							<th>Name</th>
+							<th>Size</th>
+							<th>Colour</th>
+							<th>SGD</th>
+							<th></th>
+						</tr>
+					</thead>
+					<tbody>
 
-			{{#if stage 1}}
+						{{#each items}}
+						<tr>
+							<td>{{quantity}}x</td>
+							<td><a href="{{url}}" target="_blank" title="">{{name}}</a></td>
+							<td>{{size}}</td>
+							<td>{{color}}</td>
+							<td>${{SGD}}</td>
+							<td>
+								<a class="btn btn-danger delete-item"><i class="icon-trash icon-white"></i></a>
+							</td>
+						</tr>
 
-			<div class="span4 offset3">
-				{{> orderSummary this}}
+						{{/each}}
+					</tbody>
+				</table>
+				<small>Last Update: {{dateFormat lastUpdate format="Do MMMM, HH:mm"}}</small>
 			</div>
-			{{/if}}
-			
-
-			<table class="table table-striped table-bordered table-condensed table-hover">
-				<thead>
-					<tr>
-						<th>Quantity</th>
-						<th>Name</th>
-						<th>Size</th>
-						<th>Colour</th>
-						<th>SGD</th>
-						<th>Actions</th>
-					</tr>
-				</thead>
-				<tbody>
-
-					{{#each items}}
-					<tr>
-						<td>{{quantity}}x</td>
-						<td><a href="{{url}}" target="_blank" title="">{{name}}</a></td>
-						<td>{{size}}</td>
-						<td>{{color}}</td>
-						<td>${{SGD}}</td>
-						<td>
-							<a class="btn btn-danger delete-item"><i class="icon-trash icon-white"></i></a>
-						</td>
-					</tr>
-
-					{{/each}}
-				</tbody>
-			</table>
-			<small>Last Update: {{dateFormat lastUpdate format="Do MMMM, HH:mm"}}</small>
-
 		</div>
+		{{#if stage 1}}
+		<div class="box span4">
+			<div class="box-header">
+				<h2>Payment 1 </h2>
+			</div>
+			<div class="box-content">
+				{{> payment1 this}}
+			</div>
+		</div>
+		{{/if}}
+
+		{{#if stage 6}}
+		<div class="box span4">
+			<div class="box-header">
+				<h2>Payment 2 </h2>
+			</div>
+			<div class="box-content">
+				{{> payment2 this}}
+			</div>
+		</div>		
+		{{/if}}
 	</div>
-</div>
 
-{{else}}
+	{{else}}
 
-<h4>You have not placed any orders. <a data-toggle="modal" data-target="#howto">start shopping now!</a>
-</h4>
+	<h4>You have not placed any orders. <a data-toggle="modal" data-target="#howto">start shopping now!</a>
+	</h4>
 
-{{/each}}
+	{{/each}}
 </template>
 
 
