fix payment bug

--- a/client/views/payment/payment.html
+++ b/client/views/payment/payment.html
@@ -8,9 +8,9 @@
 		<br><br>
 
 		{{#if stage 1}}
-		<a class="btn btn-info btn-block" id="checkout">Checkout</a>
+		<a class="btn btn-info btn-block checkout">Checkout</a>
 
-		<div id="payment-form" style="text-align:left;" class="hide">
+		<div id="payment1-form" style="text-align:left;" class="hide">
 			<p>
 				Make your transfers to either <br>
 				<span>POSB Savings <b>228-21866-9</b> (prefered)</span> or <br>
