remove insecure package

--- a/client/views/orders/add_order.html
+++ b/client/views/orders/add_order.html
@@ -27,11 +27,11 @@
 					<div class="control-group">
 						<label class="control-label">Color</label>
 						<div class="controls">
-							<input class="input-block-level" type="text" name="color" placeholder="Color">
+							<input class="input-block-level" type="text" name="color" required placeholder="Color">
 						</div>
 						<label class="control-label">Size</label>
 						<div class="controls">
-							<input class="input-block-level" type="text" name="size" placeholder="Size">
+							<input class="input-block-level" type="text" name="size" required placeholder="Size">
 						</div>
 					</div>
 
