--- a/client/views/merchants/add_merchant.html
+++ b/client/views/merchants/add_merchant.html
@@ -22,6 +22,12 @@
 			</div>
 		</div>
 		<div class="control-group">
+			<label class="span3 control-label">Thumbnail URL</label>
+			<div class="span8 controls">
+				<input class="input-block-level" type="url" name="thumbnail" placeholder="http://.../thumbnail.jpg">
+			</div>
+		</div>
+		<div class="control-group">
 			<label class="span3 control-label">Speed</label>
 			<div class="span4 controls">
 				<input class="input-block-level" type="text" name="speed" placeholder="2-3 weeks">
