--- a/client/views/modals.html
+++ b/client/views/modals.html
@@ -71,14 +71,20 @@
 	<div class="modal hide fade" id="terms">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-			<h4 class="modal-title">Terms &amp; Conditions</h4>
+			<h1 id="terms-conditions">Terms &amp; Conditions:</h1>
 		</div>
 		<div class="modal-body">
-
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, dignissimos, quidem accusamus dolore repellat labore est inventore tempora aliquam beatae totam esse libero aut explicabo laborum molestias quaerat recusandae eaque?</p>
-			<p>Ex, quas nostrum quam inventore amet voluptates nisi? Voluptates, porro, dolorum, ratione ipsum nam laboriosam accusantium sapiente perspiciatis ut esse obcaecati dolores nobis nulla ipsam sint fugit soluta cupiditate cum.</p>
-			<p>Nobis, ipsa laborum fugiat assumenda vitae nesciunt temporibus. Voluptatibus, quisquam, sint, dolore, dolorum ipsa atque illo mollitia neque omnis itaque quos quis asperiores in hic ut? Vel, sapiente dignissimos numquam.</p>
-			<p>Blanditiis, aperiam, enim, ab debitis ad fugit dicta laboriosam non itaque illum ipsum sapiente optio provident laborum illo officia deleniti harum necessitatibus earum nam ea doloribus dolorem libero est omnis.</p>
+			<ul>
+				<li>Please join only if you’re comfortable</li>
+				<li>Please be prepared to wait for about 2-4 weeks as direct international shipping time varies for each shipment.</li>
+				<li>Please make payment before posting of orders.</li>
+				<li>Orders are taken in by the sequence of payment shown in my IBanking statement.</li>
+				<li>Updates will be made on my livejournal page or via mass email. Please bookmark.</li>
+				<li>I will not be responsible if merchant ships wrong or damaged items. I will check all orders before ordering.</li>
+				<li>I will not responsible for lost/damaged normal mails. Registered mailing are much preferred and recommended.</li>
+				<li>Refunds for OOS items will be made after all items arrive.</li>
+				<li>YantingSpree reserve the right to accept/reject orders and close the spree if response is poor or in the event of any unforeseen circumstances.</li>
+			</ul>
 		</div>
 		<div class="modal-footer">
 			<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
