--- a/client/views/admin.html
+++ b/client/views/admin.html
@@ -4,20 +4,15 @@
 	<h1>Admin Panel</h1>
 	{{#if isInRole 'admin'}}
 	
-	
-	{{> verifyPayment}}
-
+	{{> paymentManagement}}
 	{{> orderManagement}}
-	
 	{{> spreeManagement}}
-
 	{{> merchantManagement}}
-
-	{{> addMerchant}}
+	{{> userManagement}}
 	{{/if}}
 </template>
 
-<template name="verifyPayment">
+<template name="paymentManagement">
 	<legend>Payment Verification</legend>
 	<table class="table table-striped table-bordered table-hover table-condensed">
 		<thead>
@@ -110,169 +105,167 @@
 			{{#each orders}}
 			<tr>
 				<td><a class="select-order"><span class="hidden-phone">{{int_id}}</span>
-				<span class="visible-phone">details</span></a></td>
-				<td>{{spreeName spree}}</td>
-				<td><a href="mailto:{{userEmail user}}" target="_blank">{{userName user}}</a></td>
-				<td>{{statusName status}}</td>
-				<td>
-					<a class="status-dec btn btn-small"><i class="icon-backward"></i></a>
-					<a class="status-inc btn btn-small"><i class="icon-forward"></i></a>
+					<span class="visible-phone">details</span></a></td>
+					<td>{{spreeName spree}}</td>
+					<td><a href="mailto:{{userEmail user}}" target="_blank">{{userName user}}</a></td>
+					<td>{{statusName status}}</td>
+					<td>
+						<a class="status-dec btn btn-small"><i class="icon-backward"></i></a>
+						<a class="status-inc btn btn-small"><i class="icon-forward"></i></a>
 
-					<a target="_blank" class="email-update btn btn-small"><i class="icon-envelope"></i></a>
-					<a href="mailto:{{userEmail user}}" class="btn btn-small" target="_blank"><i class="icon-edit"></i></a>
-				</td>
-			</tr>
+						<a target="_blank" class="email-update btn btn-small"><i class="icon-envelope"></i></a>
+						<a href="mailto:{{userEmail user}}" class="btn btn-small" target="_blank"><i class="icon-edit"></i></a>
+					</td>
+				</tr>
 
-			{{/each}}
-		</tbody>
-	</table>
-</template>
+				{{/each}}
+			</tbody>
+		</table>
+	</template>
 
-<template name="spreeManagement">
-	<legend>Spree Management</legend>
-	<table>
-		<thead>
-			<tr>
-				<th>Name</th>
-				<th>Run #</th>
-				<th>Number of Orders</th>
-				<th>Status</th>
-				<th>Action</th>
-			</tr>
-		</thead>
-		<tbody>
-			{{#each allSpree}}
-			<tr>
-				<td>
-					{{merchant}}
-				</td>
-				<td>
-					{{counter}}
-				</td>
-				<td>
-					{{numberOfOrders}}
-				</td>
-				<td>
-					{{status}}
-				</td>
-				<td>
+	<template name="spreeManagement">
+		<legend>Spree Management</legend>
+		<table>
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Run #</th>
+					<th>Number of Orders</th>
+					<th>Status</th>
+					<th>Action</th>
+				</tr>
+			</thead>
+			<tbody>
+				{{#each allSpree}}
+				<tr>
+					<td>
+						{{merchant}}
+					</td>
+					<td>
+						{{counter}}
+					</td>
+					<td>
+						{{numberOfOrders}}
+					</td>
+					<td>
+						{{status}}
+					</td>
+					<td>
+						{{#if open}}
+						<a class="btn btn-small btn-danger" name="close">close</a>
+						{{else}}
+						<a class="btn btn-small btn-warning" name="reopen">reopen</a>
+						{{/if}}
+					</td>
+				</tr>
+				{{/each}}
+			</tbody>
+		</table>
+	</template>
+
+	<template name="merchantManagement">
+		<legend>Merchant Management</legend>
+		{{#each allMerchants}}
+		<div class="span5">
+			<form class="form">
+				<div class="row-fluid">
+					<label class="span4">Merchant Name</label>
+					<div class="span8">
+						<input class="input-block-level" type="text" name="_id" value="{{_id}}">
+					</div>
+				</div>
+				<div class="row-fluid">
+					<label class="span4">Merchant URL</label>
+					<div class="span8">
+						<input class="input-block-level" type="url" name="url" value="{{url}}" >
+					</div>
+				</div>
+				<div class="row-fluid">
+					<label class="span4">Banner URL</label>
+					<div class="span8">
+						<input class="input-block-level" type="url" name="banner" value="{{banner}}" >
+					</div>
+				</div>
+				<div class="row-fluid">
+					<label class="span4">Thumbnail URL</label>
+					<div class="span8">
+						<input class="input-block-level" type="url" name="banner" value="{{thumbnail}}" >
+					</div>
+				</div>
+				<div class="row-fluid">
+					<label class="span4">Speed</label>
+					<div class="span8">
+						<input class="input-block-level" type="text" name="speed" value="{{speed}}">
+					</div>
+				</div>
+				<div class="row-fluid">
+					<label class="span4">Shipping</label>
+					<div class="span8">
+						<input class="input-block-level" type="text" name="shipping" value="{{shipping}}">
+					</div>
+				</div>
+				<div class="row-fluid">
+					<label class="span4">Currency</label>
+					<div class="span8">
+						<input class="input-block-level" type="text" name="currency" value="{{currency}}">
+					</div>
+				</div>
+				<div class="row-fluid">
+					<label class="span4">Cap</label>
+					<div class="span8">
+						<input class="input-block-level" type="text" name="cap" value="{{cap}}">
+					</div>
+				</div>			
+				<div class="row-fluid">
+					<label class="span4">Remarks</label>
+					<div class="span8">
+						<textarea class="input-block-level" rows="3" name="remarks">{{remarks}}</textarea>
+					</div>
+				</div>
+
+				<div class="row-fluid">
+					<a type="button" class="btn btn-info span6" name="update"><span class="glyphicon glyphicon-pencil"></span> Update</a>
+					<a type="button" class="btn btn-info span6" name="delete"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+				</div>
+				<div class="row-fluid">
 					{{#if open}}
-					<a class="btn btn-small btn-danger" name="close">close</a>
+					<a type="button" class="btn btn-danger btn-block" name="close">Close spree now</a>
 					{{else}}
-					<a class="btn btn-small btn-warning" name="reopen">reopen</a>
+					<a type="button" class="btn btn-success btn-block" name="open">Open new spree</a>
 					{{/if}}
-				</td>
-			</tr>
-			{{/each}}
-		</tbody>
-	</table>
-</template>
+				</div>
+			</form>
+		</div>
+		{{/each}}
 
-<template name="merchantManagement">
-	<legend>Merchant Management</legend>
-	{{#each allMerchants}}
-	<div class="span5">
-		<form class="form">
-			<div class="row-fluid">
-				<label class="span4">Merchant Name</label>
-				<div class="span8">
-					<input class="input-block-level" type="text" name="_id" value="{{_id}}">
-				</div>
-			</div>
-			<div class="row-fluid">
-				<label class="span4">Merchant URL</label>
-				<div class="span8">
-					<input class="input-block-level" type="url" name="url" value="{{url}}" >
-				</div>
-			</div>
-			<div class="row-fluid">
-				<label class="span4">Banner URL</label>
-				<div class="span8">
-					<input class="input-block-level" type="url" name="banner" value="{{banner}}" >
-				</div>
-			</div>
-			<div class="row-fluid">
-				<label class="span4">Thumbnail URL</label>
-				<div class="span8">
-					<input class="input-block-level" type="url" name="banner" value="{{thumbnail}}" >
-				</div>
-			</div>
-			<div class="row-fluid">
-				<label class="span4">Speed</label>
-				<div class="span8">
-					<input class="input-block-level" type="text" name="speed" value="{{speed}}">
-				</div>
-			</div>
-			<div class="row-fluid">
-				<label class="span4">Shipping</label>
-				<div class="span8">
-					<input class="input-block-level" type="text" name="shipping" value="{{shipping}}">
-				</div>
-			</div>
-			<div class="row-fluid">
-				<label class="span4">Currency</label>
-				<div class="span8">
-					<input class="input-block-level" type="text" name="currency" value="{{currency}}">
-				</div>
-			</div>
-			<div class="row-fluid">
-				<label class="span4">Cap</label>
-				<div class="span8">
-					<input class="input-block-level" type="text" name="cap" value="{{cap}}">
-				</div>
-			</div>			
-			<div class="row-fluid">
-				<label class="span4">Remarks</label>
-				<div class="span8">
-					<textarea class="input-block-level" rows="3" name="remarks">{{remarks}}</textarea>
-				</div>
-			</div>
+		{{> addMerchant}}
+	</template>
 
-			<div class="row-fluid">
-				<a type="button" class="btn btn-info span6" name="update"><span class="glyphicon glyphicon-pencil"></span> Update</a>
-				<a type="button" class="btn btn-info span6" name="delete"><span class="glyphicon glyphicon-trash"></span> Delete</a>
-			</div>
-			<div class="row-fluid">
-				{{#if open}}
-				<a type="button" class="btn btn-danger btn-block" name="close">Close spree now</a>
-				{{else}}
-				<a type="button" class="btn btn-success btn-block" name="open">Open new spree</a>
-				{{/if}}
-			</div>
-		</form>
-	</div>
-	{{/each}}
-</template>
-
-<template name="userManagement">
-	<legend>User Management</legend>
-	<table>
-		<thead>
-			<tr>
-				<th class="span2">ID</th>
-				<th>Name</th>
-				<th>Total Purchase Amount</th>
-				<th>Status</th>
-				<th>Action</th>
-			</tr>
-		</thead>
-		<tbody>
-			{{#each orders}}
-			<tr>
-				<td>{{_id}}</td>
-				<td>{{spreeName spree}}</td>
-				<td><a href="mailto:{{userEmail user}}" target="_blank">{{userName user}}</a></td>
-				<td>{{statusName status}}</td>
-				<td>
-					<a class="status-dec btn btn-small"><i class="icon-backward"></i></a>
-					<a class="status-inc btn btn-small"><i class="icon-forward"></i></a>
-
-					<a target="_blank" class="email-update btn btn-small"><i class="icon-envelope"></i></a>
-					<a href="mailto:{{userEmail user}}" class="btn btn-small" target="_blank"><i class="icon-edit"></i></a>
-				</td>
-			</tr>
-
-			{{/each}}
-		</tbody>
-	</table>
-</template>
+	<template name="userManagement">
+		<legend>User Management</legend>
+		<table>
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Email</th>
+					<th>Action</th>
+				</tr>
+			</thead>
+			<tbody>
+				{{#each users}}
+				<tr>
+					<td>{{username}}</td>
+					<td>{{profile.email}}</td>
+					<td>
+						<a href="mailto:{{userEmail user}}" target="_blank">
+							<i class="icon-envelope"></i>
+						</a>
+					</td>
+					<!-- <td>
+						<a class="btn btn-small" name="impostor">Sign in as User</i></a>
+					</td> -->
+				</tr>
+				{{/each}}
+			</tbody>
+		</table>
+	</template>
