--- a/client/views/payment/payment.html
+++ b/client/views/payment/payment.html
@@ -23,7 +23,7 @@
 
 			Enter the transaction number below for verification
 			
-			<input type="text" class="input-block-level" name="payment-amount" placeholder="${{sumSGD}} (Transfer Amount)">
+			<input type="text" class="input-block-level" required name="payment-amount" placeholder="${{sumSGD}} (Transfer Amount)">
 			<input type="text" class="input-block-level" name="payment-transaction-number" placeholder="Transaction Reference Number">
 			
 			<b>Transfer Method</b>
@@ -109,7 +109,7 @@
 
 	Enter the transaction number below for verification
 
-	<input type="text" class="input-block-level" name="payment-amount" placeholder="${{sumSGD}} (Transfer Amount)">
+	<input type="text" class="input-block-level" required name="payment-amount" placeholder="${{sumSGD}} (Transfer Amount)">
 	<input type="text" class="input-block-level" name="payment-transaction-number" placeholder="Transaction Reference Number">
 
 	Transfer Method:
